<resources>
    <string name="app_name">GoSwipe</string>

    <!-- Preferences -->
    <string name="preferences_name">rd.project.preferences</string>
    <string name="username_preference">username</string>

    <!-- ErrorFragment -->
    <string name="error">Error</string>
    <string name="error_default_description">An error occurred.</string>
    <string name="error_back_to_main_menu">Back to main menu</string>

    <!-- JoinFragment -->
    <string name="join_searching">Looking for rooms…</string>
    <string name="join_server_item">%s, %s</string>
    <string name="join_connecting">Connecting to %s…</string>
    <string name="join_manual_label">Manual join</string>
    <string name="join_manual_button">Join</string>
    <string name="join_manual_ip_error">Please enter a valid address.</string>

    <!-- LobbyFragment -->
    <string name="lobby_join_with">Join with:</string>
    <string name="lobby_player_item_placeholder">Username</string>
    <string name="lobby_cancel">Cancel</string>
    <string name="lobby_leave">Cancel</string>
    <string name="lobby_start">Start</string>

    <!-- MenuFragment -->
    <string name="menu_welcome_message">Hello %s!</string>
    <string name="menu_host">Host</string>
    <string name="menu_join">Join</string>
    <string name="menu_starting_server">Starting server…</string>

    <!-- NameFragment -->
    <string name="name_question">What\'s your name?</string>
    <string name="name_placeholder">Name</string>
    <string name="name_confirm">OK</string>
    <string name="name_empty_error">Please enter a name.</string>

    <!-- ResultsInfoFragment -->
    <string name="results_info_fragment_title">Movie info</string>

    <!-- ResultsFragment -->
    <string name="results_title">Results</string>
    <string name="results_more_info">More info</string>
    <string name="results_error_empty_title">Oh no!</string>
    <string name="results_error_empty_description">No movies have been liked.</string>

    <!-- ResultsWaitingFragment -->
    <string name="results_waiting_title">Waiting for results…</string>
    <string name="results_waiting_progress">%d/%d finished</string>

    <!-- SwipeFragment -->
    <string name="swipe_loading">Loading…</string>

    <!-- SetupFragment -->
    <string name="setup_title">Host settings</string>
    <string name="setup_placeholder_score">8.5</string>
    <string name="setup_placeholder_year">2020</string>
    <string name="setup_apply">Apply</string>

    <!-- MultiplayerClient -->
    <string name="multiplayer_client_close">Connection closed by client.</string>

    <!-- MultiplayerServer -->
    <string name="multiplayer_server_movie_error">
        There were not enough movies which fit your criteria (%d/%d). Please adjust them.
    </string>

    <!-- Movie details -->
    <string name="what_genre">What genre?</string>
    <string name="movie_details_title">Title</string>
    <string name="movie_details_position">#%d</string>
    <string name="movie_details_platform">Platform</string>
    <string name="movie_details_score">Score</string>
    <string name="movie_details_score_format">%s/10</string>
    <string name="movie_details_year">Year</string>
    <string name="movie_details_genre">Genre</string>
    <string name="movie_details_overview">Overview</string>
    <string name="movie_details_production_date">Production date</string>
    <string name="show_more">Show more</string>

    <!-- Accessibility -->
    <string name="accessibility_movie_poster_description">Movie poster</string>

    <!-- Miscellaneous -->
    <string name="zero">0</string>
    <string name="address_placeholder">ws://ip:port</string>
</resources>