<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/r_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginHorizontal="16dp">

        <TextView
                android:text="@string/results_info_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resultInfoHeaderText"
                android:layout_centerHorizontal="true"
                android:textSize="40sp"

                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="16dp"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="48dp"
                  android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                  android:textAlignment="center" android:singleLine="false"
                  android:autoSizeTextType="uniform" android:autoSizeMinTextSize="16sp"
                  android:autoSizeMaxTextSize="32sp"
                  android:maxLines="2" android:minLines="1" android:textColor="@color/black"
                  android:text="@string/movie_details_title"
                  android:layout_centerHorizontal="true"
                  android:textSize="40sp"
                  android:id="@+id/resultInfoTitle"
                  app:layout_constraintTop_toBottomOf="@+id/resultInfoHeaderText" app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent" android:textStyle="normal"
                  android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
        <ImageView android:layout_width="200dp" android:layout_height="300dp"
                   android:id="@+id/resultInfoPoster"

                   app:layout_constraintTop_toBottomOf="@+id/resultInfoTitle" app:srcCompat="@drawable/poster_placeholder"
                   app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                   android:contentDescription="@string/accessibility_movie_poster_description"/>


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_below="@+id/resultInfoPoster"
                  android:text="@string/movie_details_overview"
                  android:id="@+id/resultInfoOverviewText"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/resultInfoPoster" android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_below="@+id/resultInfoOverviewText"
                  android:text="@string/movie_details_production_date"
                  android:textStyle="bold"
                  android:id="@+id/resultInfoProductionDateLabel"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/resultInfoOverviewText" android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/resultInfoProductionDate"
                  android:text="@string/movie_details_year"
                  android:layout_below="@+id/resultInfoProductionDateLabel"
                  android:textSize="18sp"

                  app:layout_constraintTop_toBottomOf="@+id/resultInfoProductionDateLabel" app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_below="@+id/resultInfoProductionDate"
                  android:text="@string/movie_details_score"
                  android:textStyle="bold"
                  android:id="@+id/resultInfoScoreLabel"
                  android:textSize="18sp"

                  app:layout_constraintTop_toBottomOf="@+id/resultInfoProductionDate" android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_below="@+id/resultInfoScoreLabel"
                  android:text="@string/movie_details_score_format"
                  android:id="@+id/resultInfoScore"
                  android:textSize="18sp"

                  app:layout_constraintTop_toBottomOf="@+id/resultInfoScoreLabel" app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/movie_details_genre"
                  android:textStyle="bold"
                  android:layout_below="@+id/resultInfoScore"
                  android:id="@+id/resultInfoGenreLabel"
                  android:textSize="18sp"

                  app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/resultInfoScore"
                  android:layout_marginTop="8dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/movie_details_genre"
                  android:layout_below="@+id/resultInfoGenreLabel"
                  android:id="@+id/resultInfoGenre"
                  android:textSize="18sp"

                  app:layout_constraintTop_toBottomOf="@+id/resultInfoGenreLabel" app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/movie_details_platform"
                  android:textStyle="bold"
                  android:layout_below="@+id/resultInfoGenre"
                  android:id="@+id/resultInfoPlatformLabel"
                  android:textSize="18sp"

                  app:layout_constraintTop_toBottomOf="@+id/resultInfoGenre" android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/movie_details_platform"
                  android:layout_below="@+id/resultInfoPlatformLabel"
                  android:id="@+id/resultInfoPlatform"
                  android:textSize="18sp"

                  app:layout_constraintTop_toBottomOf="@+id/resultInfoPlatformLabel" app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>