<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp">

        <TextView
                android:text="@string/join_searching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/joinLookingCircle"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:id="@+id/joinLookingText"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/joinLookingCircle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/serverList"
            tools:listitem="@layout/item_server"
            app:layout_constraintBottom_toTopOf="@+id/manualJoinLabel" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
            android:background="@color/inset_background"/>
    <TextView
            android:text="@string/join_manual_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/manualJoinLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/editTextIP"
            app:layout_constraintBottom_toTopOf="@+id/editTextIP"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextIP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/manualJoinButton"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp" android:layout_marginEnd="8dp"
            android:singleLine="true" android:hint="@string/address_placeholder" android:importantForAutofill="no"
            android:inputType="textUri"/>
    <Button
            android:text="@string/join_manual_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/manualJoinButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/editTextIP"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>